# research-experiment

./: .gitignore  main.py  pyproject.toml
DDPM/: ddpm_colab_production.ipynb  evaluate.py  main.py  pyproject.toml  sample.py  train.py
DDPM/config/: __init__.py  default.py
DDPM/scripts/: run_baseline.sh  run_baseline_debug.sh
DDPM/utils/: __init__.py  data.py
GAN/src/: main.ipynb
LDM/: LDM.html  LDM.qmd  LDM.tex  LDM_local.py  README.md  _quarto.yml  ddpm_colab_production.ipynb  evaluate.py  ldm_production.ipynb  main.py  marp.md  prepare_latents.py  pyproject.toml  sample.py  train.py
LDM/config/: __init__.py  default.py
LDM/models/: __init__.py  diffusion.py  ema.py  unet.py
LDM/scripts/: run_ablation.py  run_baseline.sh  run_baseline_debug.sh
LDM/utils/: __init__.py  data.py  latents.py  logger.py
pytorch/basicguide/: model.pth  quickstart.py
sensing_eng/: sensing2025.ipynb
visualization-attentionmap-and-difference-of-each-layer/: distilbert.ipynb
