[project]
name = "ddpm"
version = "0.1.0"
description = "Reproduction of Ho et al. 2020 'Denoising Diffusion Probabilistic Models'"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "pillow>=9.0.0",
    "tqdm>=4.65.0",
    "einops>=0.6.0",
    "scipy>=1.10.0",
    "diffusers>=0.30.0",
    "transformers>=4.41.0",
    "accelerate>=0.33.0",
    "wandb>=0.17.0",
    "python-dotenv>=1.0.1",
    "gdown>=5.2.1",
    "torchaudio>=2.9.1",
    "ipykernel>=7.1.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest",
]

[project.scripts]
ddpm = "main:main"

[tool.uv]
dev-dependencies = [
    "black",
    "ruff",
    "pytest",
]
